# Campus-Navigation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  设计要求.md  设计计划.md  项目框架.md
controller/: NavigationController.cpp  NavigationController.h
core/graph/: Graph.cpp  Graph.h
core/map/: Building.h  CampusMap.cpp  CampusMap.h
core/pathfinding/: Dijkstra.cpp  Dijkstra.h
database/: DatabaseManager.cpp  DatabaseManager.h
graph/: Graph.h
graphics/: CharacterItem.cpp  CharacterItem.h  MapView.cpp  MapView.h  NpcItem.cpp  NpcItem.h
resources/: map_data_fuben.json  resources.qrc
ui/: DialogWidget.cpp  MainWindow.cpp  MainWindow.h
